# turtlebot3

./: .gitignore  ak_proxy
bags/: 2022-03-29-15-56-01.bag  2022-03-29-16-09-15.bag  2022-03-29-16-42-45.bag  frames.gv  record_bag.sh
calib/: ost.yaml
maps/: filtered_map.pgm  filtered_map.yaml  hector_studi_office.yaml  map.pgm  map.yaml  octomap.bt  octomap_filtered.pgm  octomap_filtered.yaml  octomap_raw.pgm  octomap_raw.yaml
sensor_fusion/: CMakeLists.txt  package.xml
sensor_fusion/cfg/: fusion.cfg
sensor_fusion/launch/: sensor_fusion.launch
sensor_fusion/src/: main.cpp  sensor_fusion.cpp  sensor_fusion.hpp
transform_image/: CMakeLists.txt  package.xml
transform_image/src/: transform_image.py
turtlebot3_bringup/: package.xml
turtlebot3_bringup/camera_info/: ost.yaml
turtlebot3_bringup/launch/: turtlebot3_full.launch  turtlebot3_lidar.launch  turtlebot3_robot.launch  turtlebot3_robot_octomap.launch  turtlebot3_rviz.launch
turtlebot3_bringup/launch/includes/: description.launch.xml
turtlebot3_description/meshes/: elp_camera_mount.3mf  elp_camera_mount_2.3mf  realsense_mount.3mf
turtlebot3_description/urdf/: turtlebot3_waffle_pi_2.urdf.xacro  turtlebot3_waffle_pi_2_rplidar.urdf.xacro
turtlebot3_navigation/launch/: amcl.launch
turtlebot3_navigation/param/: costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml  local_costmap_params.yaml
turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
turtlebot3_slam/config/: turtlebot3_lds_2d.lua  turtlebot3_lds_2d_orig.lua  turtlebot3_lds_3d.lua
turtlebot3_slam/launch/: turtlebot3_cartographer.launch  turtlebot3_hector.launch  turtlebot3_rviz.launch  turtlebot3_slam.launch
turtlebot3_slam/rviz/: turtlebot3.rviz  turtlebot3_cartographer_2.rviz
