<?xml version="1.0"?>
<package format="2">
  <name>sensor_fusion</name>
  <version>0.1.0</version>
  <description>The sensor_fusion package</description>

  <maintainer email="julian-baisch@web.de">Julian Baisch</maintainer>
  <license>private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <export>
  </export>
</package>