<?xml version="1.0"?>
<package format="2">
  <name>transform_image</name>
  <version>0.0.0</version>
  <description>The transform_image package</description>

  <maintainer email="julian-baisch@web.de">Julian Baisch</maintainer>
  <license>private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  
  <export>
  </export>
</package>